--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
   post_build:
     commands:
       - docker push "$IMAGEURI"
+      - docker tag "$IMAGEURI" "${REPOSITORY_URI}:latest"
       - printf '[{"name":"bu-webrouter", "imageUri":"%s"}]' "$IMAGEURI" >build.json 
 artifacts:
   files: build.json
