--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - $(aws ecr get-login --no-include-email )
       - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - IMAGEURI="${REPOSITORY_URI}:${TAG}"
-      - aws secretsmanager get-secret-value --secret-id $GITHUB_CREDENTIALS_SECRET --query SecretString
+      - aws secretsmanager get-secret-value --secret-id websites-webrouter-dockerhub-secret --query SecretString
       - which jq
       - exit 1
   build:
