--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,14 +7,10 @@ phases:
       - $(aws ecr get-login --no-include-email )
       - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - IMAGEURI="${REPOSITORY_URI}:${TAG}"
-      - ls -ld /etc/*version* /etc/*release*
-      - cat /etc/debian_version
-      - echo "$DOCKERHUB"
       - apt-get update
       - apt-get install jq
-      - which jq
       - DOCKERHUB_PASSWORD=$(aws secretsmanager get-secret-value --secret-id websites-webrouter-dockerhub-secret --query SecretString | jq --raw-output . | jq .password )
-      - DOCKERHUB_USER=$(aws secretsmanager get-secret-value --secret-id websites-webrouter-dockerhub-secret --query SecretString | jq --raw-output . | jq .user )
+      - DOCKERHUB_USERNAME=$(aws secretsmanager get-secret-value --secret-id websites-webrouter-dockerhub-secret --query SecretString | jq --raw-output . | jq .user )
       - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
       - docker info
       - exit 1
