--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,9 @@ phases:
       - IMAGEURI="${REPOSITORY_URI}:${TAG}"
       - apt-get update
       - apt-get install jq
-      - DOCKERHUB_PASSWORD=$(aws secretsmanager get-secret-value --secret-id websites-webrouter-dockerhub-secret --query SecretString | jq --raw-output . | jq .password )
-      - DOCKERHUB_USERNAME=$(aws secretsmanager get-secret-value --secret-id websites-webrouter-dockerhub-secret --query SecretString | jq --raw-output . | jq .user )
+      - DOCKERHUB_PASSWORD=$(echo "$DOCKERHUB" | jq --raw-output . | jq -r .password )
+      - DOCKERHUB_USERNAME=$(echo "$DOCKERHUB" | jq --raw-output . | jq -r .user )
+      - echo "user=$DOCKERHUB_USERNAME"
       - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
       - docker info
       - exit 1
