--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,12 +9,12 @@ phases:
       - IMAGEURI="${REPOSITORY_URI}:${TAG}"
       - apt-get update
       - apt-get install jq
+      - echo "$DOCKERHUB"
       - DOCKERHUB_PASSWORD=$(echo "$DOCKERHUB" | jq --raw-output . | jq -r .password )
       - DOCKERHUB_USERNAME=$(echo "$DOCKERHUB" | jq --raw-output . | jq -r .user )
       - echo "user=$DOCKERHUB_USERNAME"
       - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
       - docker info
-      - exit 1
   build:
     commands:
       - docker build --build-arg "landscape=$LANDSCAPE" --tag "$IMAGEURI" .
